# BostonHousingCPP

./: .gitignore  CMakeLists.txt  README.md
data/: DataCleaning.ipynb
headers/: etl.h  linearRegression.h
notebooks/: DataCleaning.ipynb
src/: etl.cpp  linearRegression.cpp  main.cpp
